Agregar evento pyweekend

--- a/index.html
+++ b/index.html
@@ -104,10 +104,19 @@
             </article>
 
             <article class="event"> 
-                <figure class="event-imageContainer"> <img class="event-image" src="imagenes/nasa.jpg" alt="Imagen nasa space apps challenge 2019 " width="200"></figure>
+                <figure class="event-imageContainer"> <img class="event-image" src="imagenes/nasa.jpg" alt="Imagen nasa space apps challenge 2019" width="200"></figure>
                 <div class="event-detail">
                     <h3 class="event-title">Participante Nasa Space Apps Challenge 2019</h3>
                     <p class="event-description">Evento organizado por i3Lab- Espol</p>
+                    <a class="event-url" href="https://2019.spaceappschallenge.org/challenges/planets-near-and-far/raiders-lost-data/teams/spaceswat/" target="_blank">Ver página</a>
+                </div>
+            </article>
+
+            <article class="event"> 
+                <figure class="event-imageContainer"> <img class="event-image" src="imagenes/pw1.jpg" alt="Imagen PyWeekend primera edicion" width="200"></figure>
+                <div class="event-detail">
+                    <h3 class="event-title">Participante PyWeekend 1era Edición Espol 2018</h3>
+                    <p class="event-description">Evento organizado por Espol</p>
                     <a class="event-url" href="https://2019.spaceappschallenge.org/challenges/planets-near-and-far/raiders-lost-data/teams/spaceswat/" target="_blank">Ver página</a>
                 </div>
             </article>
