Mejorado del header y proyect para diferentes tipos de ventanas

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
     </header>
 
-    <section class="hero">
+    <!-- <section class="hero">
         <div class="container">
             <h1>
                 Hola! Soy <strong>Josue Davalos</strong> <br> Desarrollador Web y Data Sciencer <br> con pasión en <strong>Inteligencia Artificial</strong>
             </h1>
             <img class="hero-foto" src="imagenes/foto.jpg" alt="Foto de Josue Davalos">
         </div>
-    </section>
+    </section> -->
 
     <section class="portafolio" id="portafolio">
         <div class="container">
@@ -38,10 +38,10 @@
             <article class="proyect">
                 <div class="proyect-details">
                     <h3 class="proyect-title">Prediccion Camarones</h3>
-                    <h6 class="proyect-subtitle">Predecir Crecimiento de lso camarones</h6>
+                    <h6 class="proyect-subtitle">Predecir Crecimiento de los camarones</h6>
                     <p class="proyect-date"><small><strong>Fecha:</strong>10-03-2020 a 10-05-2020</small></p>
                     <p class="proyect-url"><small><strong>Puedes verlo en:</strong>github/JosueDavalos</small></p>
-                    <p class="proyect-description">Analisis exploratorio de datos e predecir Crecimiento</p>
+                    <p class="proyect-description">Analisis exploratorio de datos e predecir Crecimiento de una piscina determinada, empleando tecnica de machine e deep learning en python</p>
                  </div>
                  <figure class="proyect-imageContainer"> <img class="proyect-image" src="imagenes/camaron.png" alt="Imagen camaron"></figure>
                  <!-- <div>Icons made by <a href="https://www.flaticon.com/authors/monkik" title="monkik">monkik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div> -->
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <div class="container">
+    <!-- <div class="container">
         <h2 class="event-list-title">Más sobre mi experiencia adquirida en eventos</h2>
     </div>
     <section class="events-list" id="eventos">
@@ -150,7 +150,7 @@
                 <p>diseñado con <\3 por Josue Davalos de <a href="https://twitter.com/tawsespol" target="_blank">Taws</a></p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 
 </html>
