Mejorado de eventos para diferentes pantallas

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <!-- <div class="container">
+    <div class="container">
         <h2 class="event-list-title">Más sobre mi experiencia adquirida en eventos</h2>
     </div>
     <section class="events-list" id="eventos">
@@ -150,7 +150,7 @@
                 <p>diseñado con <\3 por Josue Davalos de <a href="https://twitter.com/tawsespol" target="_blank">Taws</a></p>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
