Mejorado de footer en varias ventanas

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div> 
     
             <div>
-                <p>diseñado con <\3 por Josue Davalos de <a href="https://twitter.com/tawsespol" target="_blank">Taws</a></p>
+                <p>diseñado con ❤️️ por Josue Davalos de <a href="https://twitter.com/tawsespol" target="_blank">Taws</a></p>
             </div>
         </div>
     </footer>
