--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         </div>
     </header>
 
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
             <h1>
                 Hola! Soy <strong>Josue Davalos</strong> <br> Desarrollador Web y Data Sciencer <br> con pasión en <strong>Inteligencia Artificial</strong>
             </h1>
             <img class="hero-foto" src="imagenes/foto.jpg" alt="Foto de Josue Davalos">
         </div>
-    </section> -->
+    </section>
 
     <section class="portafolio" id="portafolio">
         <div class="container">
